Ändringar efter årsmöte

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 <text x="142" y="315" class="s4" onclick="openCategory(event, 'marknad-klippan')">Åby Klippan </text>
                                 <!-- <text x="142" y="328" class="s4" onclick="openCategory(event, 'marknad-klippan')">16 juni</text> -->
                                 <text x="95" y="385" class="s4" onclick="openCategory(event, 'marknad-landskrona')">Landskrona </text>
-                                <!-- <text x="100" y="398" class="s4" onclick="openCategory(event, 'marknad-landskrona')">19-21 juni</text> -->
+                                <text x="100" y="398" class="s4" onclick="openCategory(event, 'marknad-landskrona')">24-26 juni</text>
                                 <text x="115" y="507" class="s4" onclick="openCategory(event, 'marknad-limhamn')">Limhamn </text>
                                 <text x="116" y="520" class="s4" onclick="openCategory(event, 'marknad-limhamn')">24-26 juni</text>
                                 <text x="128" y="355" class="s4" onclick="openCategory(event, 'marknad-ljungbyhed')">Ljungbyhed </text>
@@ -1671,7 +1671,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 13-14/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: 19-20/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong><!-- : 28-29/8 --></button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-landskrona')"><strong>Landskrona</strong><!-- : 19-21/6 --></button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-landskrona')"><strong>Landskrona</strong>: 24-26/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-limhamn')"><strong>Limhamn</strong>: 24-26/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-rostanga')"><strong>Röstånga</strong>: 23-24/7</button>
                             </div>
@@ -2066,7 +2066,7 @@
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
                                             <p>Kiviks Marknad<br>
-                                            <a href="mailto:beach1@live.se">beach1@live.se</a><br>
+                                            <a href="mailto:info@marknadsgeneralen.se">info@marknadsgeneralen.se</a><br>
                                             <a href="http://www.kiviksmarknad.com/">www.kiviksmarknad.com</a>
                                             </p>
                                         </div>
@@ -2109,7 +2109,7 @@
                                                 Roland Svensson<br>
                                                 Smålandsgatan 34<br>
                                                 265 31 Åstorp<br>
-                                                0709-78 58 21<br>
+                                                0708-14 62 34<br>
                                                 <a href="mailto:rolle1992@msn.com">rolle1992@msn.com</a>
                                             </p>
                                         </div>
@@ -2262,7 +2262,7 @@
                                                 Lummerstigen 12<br>
                                                 261 72 Häljarp<br>
                                                 0702-38 78 06<br>
-                                                <a href="mailto:beach1@live.se">beach1@live.se</a><br>
+                                                <a href="mailto:info@marknadsgeneralen.se">info@marknadsgeneralen.se</a><br>
                                             </p>
                                         </div>
                                     </div>
@@ -2303,7 +2303,7 @@
                                                 Lummerstigen 12<br>
                                                 261 72 Häljarp<br>
                                                 0702-38 78 06<br>
-                                                <a href="mailto:beach1@live.se">beach1@live.se</a><br>
+                                                <a href="mailto:info@marknadsgeneralen.se">info@marknadsgeneralen.se</a><br>
                                             </p>
                                         </div>
                                     </div>
@@ -2325,24 +2325,20 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                    <!-- <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12"> -->
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                             <h4>Förening</h4>
                             <p>Skånska Marknader är en förening för alla marknadsarrangörer i Skåne. Föreningens ändamål är att verka för en sund utveckling av Skånes marknader och vara ett forum för erfarenhetsutbyte mellan arrangörer, att besluta om gemensamma marknadsföringsåtgärder och söka samordna marknadsdagarna tidsmässigt. Föreningen skall också söka tillvarata medlemmars intressen gentemot myndigheter och enskilda. årsmöte hålles senast januari/februari månad, kallelse översändes till medlemmar.
                                 Medlemskap antages på årsmöte efter inkommen ansökan. För ett medlemskap bör marknaden besökas av minst 5000 personer. Avgiften är 900 kr/år.</p>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                    <!-- <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                             <h4>Dokument</h4>
                             <p><a href="pdf/2018arsmote.pdf">Årsmötesprotokoll 2018</a></p>
-                            <p><a href="pdf/2018marknader.pdf">Marknadsdagar 2018</a></p>
-                            <p><a href="pdf/2018adresser.pdf">Kontaktuppgifter arrangörer 2018</a></p>
-                            <p><a href="pdf/20170202arsmotesprotokoll.pdf">Årsmötesprotokoll 2017</a></p>
-                            <p><a href="pdf/2017konstituerande.pdf">Konstituerande möte</a></p>
-                            <p><a href="pdf/2017narvarolista.pdf">Närvarolista årsmöte</a></p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -2362,25 +2358,25 @@
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="box  wow slideInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                             <h4>Ordförande</h4>
-                            <p>Ronny Nilsson<br>
-                                0708-88 42 29</p>
+                            <p>Nils-Bertil Olsson<br>
+                                <a href="mailto:nilsbertil_olsson@hotmail.com">nilsbertil_olsson@hotmail.com</a><br>
+                                0708-42 78 97</p>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                             <h4>Sekreterare</h4>
-                            <p>Gunnel Levin<br>
-                                <a href="mailto:gunnel.levin@gmail.com">gunnel.levin@gmail.com</a>
-                            </p>
+                            <p>Kent Rickbo<br>
+                                <a href="mailto:limhamnsmarknad@gmail.com">limhamnsmarknad@gmail.com</a><br>
+                                0702-44 61 41</p>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                             <h4>Kassör</h4>
-                            <p>Marita Rosengren<br>
-                                0708-92 88 29</p>
+                            <p>Marita Rosengren</p>
                         </div>
                     </div>
                 </div>
@@ -2390,7 +2386,7 @@
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                             <h4>Ledamöter</h4>
                             <p>Christer Sylvan<br>
-                                Patrik Wirén</p>
+                                Roland Svensson</p>
                         </div>
                     </div>
 
@@ -2398,7 +2394,7 @@
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="1s">
                             <h4>Ersättare</h4>
                             <p>Renée Jönsson-Fiegen<br>
-                                Anders Strand</p>
+                                Malin Mandin</p>
                         </div>
                     </div>
                 </div>
