--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <text x="309" y="451" class="s4" onclick="openCategory(event, 'marknad-kivik')">Kivik</text>
                                 <text x="292" y="463" class="s4" onclick="openCategory(event, 'marknad-kivik')">16-19 juli</text>
                                 <text x="142" y="315" class="s4" onclick="openCategory(event, 'marknad-klippan')">Åby Klippan </text>
-                                <!-- <text x="142" y="328" class="s4" onclick="openCategory(event, 'marknad-klippan')">16 juni</text> -->
+                                <text x="142" y="328" class="s4" onclick="openCategory(event, 'marknad-klippan')">21 juni</text>
                                 <text x="95" y="385" class="s4" onclick="openCategory(event, 'marknad-landskrona')">Landskrona </text>
                                 <text x="100" y="398" class="s4" onclick="openCategory(event, 'marknad-landskrona')">24-26 juni</text>
                                 <text x="115" y="507" class="s4" onclick="openCategory(event, 'marknad-limhamn')">Limhamn </text>
@@ -154,6 +154,7 @@
                                 <text x="128" y="355" class="s4" onclick="openCategory(event, 'marknad-ljungbyhed')">Ljungbyhed </text>
                                 <text x="132" y="369" class="s4" onclick="openCategory(event, 'marknad-ljungbyhed')">19-20 aug</text>
                                 <text x="305" y="490" class="s4" onclick="openCategory(event, 'marknad-lovestad')">Lövestad</text>
+                                <text x="305" y="501" class="s4" onclick="openCategory(event, 'marknad-lovestad')">4 sept</text>
                                 <!-- <text x="305" y="501" class="s4" onclick="openCategory(event, 'marknad-lovestad')">5 april, 6 sept</text> -->
                                 <text x="403" y="256" class="s4" onclick="openCategory(event, 'marknad-ronneby')">Ronneby</text>
                                 <text x="403" y="268" class="s4" onclick="openCategory(event, 'marknad-ronneby')">8-10 juli</text>
@@ -169,7 +170,7 @@
                                 <text x="309" y="532" class="s4" onclick="openCategory(event, 'marknad-tomelilla')">21 juli</text>
                                 <text x="310" y="544" class="s4" onclick="openCategory(event, 'marknad-tomelilla')">27 okt</text>
                                 <text x="125" y="551" class="s4" onclick="openCategory(event, 'marknad-trelleborg')">Trelleborg</text>
-                                <!-- <text x="127" y="561" class="s4" onclick="openCategory(event, 'marknad-trelleborg')">28-29 aug</text> -->
+                                <text x="127" y="561" class="s4" onclick="openCategory(event, 'marknad-trelleborg')">26-27 aug</text>
                                 <text x="278" y="345" class="s4" onclick="openCategory(event, 'marknad-vinslov')">Vinslöv</text>
                                 <text x="278" y="356" class="s4" onclick="openCategory(event, 'marknad-vinslov')">5 juni</text>
                                 <text x="107" y="286" class="s4" onclick="openCategory(event, 'marknad-astorp')">Torparedagar</text>
@@ -1650,12 +1651,12 @@
                     <div class="col-md-12">
                         <div class="tab-services">
                             <div class="tab clearfix">
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong><!-- : 5/4 & 6/9 --></button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: 4/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-eslov')"><strong>Eslöv</strong><!-- : 30-31/5 & 26-27/9 --></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-broby')"><strong>Broby</strong>: 4/6 & 3/9</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: 5/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: 10-12/6 & 8-9/10</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong><!-- : 16/6 --></button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: 21/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-jonstorp')"><strong>Jonstorp</strong>: <del>1-3/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: 6/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: 6-7/7</button>
@@ -1670,7 +1671,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-gislov')"><strong>Gislöv</strong>: 5-7/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 13-14/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: 19-20/8</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong><!-- : 28-29/8 --></button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong>: 26-27/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-landskrona')"><strong>Landskrona</strong>: 24-26/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-limhamn')"><strong>Limhamn</strong>: 24-26/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-rostanga')"><strong>Röstånga</strong>: 23-24/7</button>
