Plockade bort datum för Åhus

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 <text x="107" y="286" class="s4" onclick="openCategory(event, 'marknad-astorp')">Torparedagar</text>
                                 <text x="107" y="300" class="s4" onclick="openCategory(event, 'marknad-astorp')">Åstorp 2-3 juli</text>
                                 <text x="325" y="374" class="s4" onclick="openCategory(event, 'marknad-ahus')">Åhus</text>
-                                <text x="319" y="385" class="s4" onclick="openCategory(event, 'marknad-ahus')">27-28 juli</text>
+                                <!-- <text x="319" y="385" class="s4" onclick="openCategory(event, 'marknad-ahus')">27-28 juli</text> -->
 
                                 <text x="79" y="629" dx="0,0,0,-.9,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,-1.7,0,0,0" class="s6">www.skanskamarknader.com</text>
                                 <path d="M63.9,287.7c1.9,0,3.5,-1.6,3.5,-3.5c0,-1.9,-1.6,-3.4,-3.5,-3.4c-1.9,0,-3.5,1.5,-3.5,3.4c0,1.9,1.6,3.5,3.5,3.5Z" class="g2" />
