Ändrade Kent Rickbos kontaktuppgifter

--- a/index.html
+++ b/index.html
@@ -2369,8 +2369,8 @@
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                             <h4>Sekreterare</h4>
                             <p>Kent Rickbo<br>
-                                <a href="mailto:limhamnsmarknad@gmail.com">limhamnsmarknad@gmail.com</a><br>
-                                0702-44 61 41</p>
+                                <a href="mailto:kent@rickbo.se">kent@rickbo.se</a><br>
+                                0768-240003</p>
                         </div>
                     </div>
 
