Åhus är inte inställd

--- a/index.html
+++ b/index.html
@@ -1685,7 +1685,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: 20-21/7 & 7-8/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-degeberga')"><strong>Degeberga</strong>: 10-11/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: 15-17/7</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: <del>26-27/7</del></button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: 26-27/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-astorp')"><strong>Åstorp</strong>: 17-18/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-gislov')"><strong>Gislöv</strong>: 4-6/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 12-13/8</button>
@@ -2079,7 +2079,7 @@
                                                 281 42 Hässleholm<br>
                                                 0708-884 229<br>
                                                 <a href="mailto:ronny.hassan@telia.com">ronny.hassan@telia.com</a><br>
-                                                <a href="https://www.hassans.se/">www.hassans.se</a>
+                                                <a href="https://hassans.se/">hassans.se</a>
                                             </p>
                                         </div>
                                     </div>
