--- a/index.html
+++ b/index.html
@@ -2186,8 +2186,8 @@
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
                                             <p>LKFF<br>
-                                                Box 33<br>
-                                                264 03 Ljungbyhed
+                                                Klostergatan 2A<br>
+                                                264 51 Ljungbyhed
                                             </p>
                                             <hr class="invis">
                                             <p>Jimmy Ahlberg<br>
