Ändrat kontaktuppgifter till Hörby marknad

--- a/index.html
+++ b/index.html
@@ -1893,9 +1893,8 @@
                                                 Box 91<br>
                                                 242 21 Hörby</p>
                                             <hr class="invis">
-                                            <p>Emma Sander<br>
-                                                0415-37 81 41 Marknadstelefon Tis+Tors kl 10-12<br>
-                                                <a href="mailto:horby.marknad@horby.se">horby.marknad@horby.se</a><br>
+                                            <p>Jonna Erlandsson<br>
+                                                0415-37 84 55<br>
                                                 <a href="https://www.horby.se/">www.horby.se</a>
                                             </p>
                                         </div>
