Gislövs marknad har ny text

--- a/index.html
+++ b/index.html
@@ -2128,15 +2128,16 @@
                                         <div class="col-lg-12">
                                             <h2>Gislövs Marknad</h2>
                                             <p>Gislövs marknad har ca 30 000 besökare varje år.<br>
-                                                145 knallar är representerade på marknaden.</p>
+                                                Ett hundratal knallar är representerade på marknaden.</p>
                                             <hr class="invis">
                                             <p>Marknadsplats: Gislövs Läge, Trelleborg vid ga idrottsplatsen.</p>
                                             <hr class="invis">
                                             <p>Marknaden startades år 1980.</p>
                                             <hr class="invis">
-                                            <p>Vägbeskrivning: Gislövs IF gamla idrottsplats. Trelleborg, väg 9 mot Ystad. Följ skyltar.</p>
+                                            <p>Vägbeskrivning: Gislövs IF gamla idrottsplats. Trelleborg, Gislövs Strandväg mot Ystad. Följ skyltar.</p>
                                             <hr class="invis">
-                                            <p>En familjemarknad i naturskön miljö med nöjesfält, öltält och matservering.</p>
+                                            <p>En familjemarknad i naturskön miljö med nöjesfält, öltält och matservering.<br>
+                                                Kaffetält och de goda och omtalade silla mackorna.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
@@ -2148,8 +2149,14 @@
                                                 Gislövsstrandväg 125<br>
                                                 231 92 Trelleborg</p>
                                             <hr class="invis">
+                                            <p>Matservering<br>
+                                                Ursula Ekström<br>
+                                                070-9369666<br>
+                                            </p>
+                                            <hr class="invis">
                                             <p>Nils Bertil Olsson<br>
                                                 0708-42 78 97<br>
+                                                <a href="mailto:marknad@gislovsif.se">marknad@gislovsif.se</a><br>
                                                 <a href="mailto:kansli@gislovsif.se">kansli@gislovsif.se</a><br>
                                                 <a href="mailto:nilsbertil_olsson@hotmail.com">nilsbertil_olsson@hotmail.com</a><br>
                                                 <a href="https://www.gislovsif.se/">www.gislovsif.se</a><br>
