--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <circle cx="120" cy="310" r="3.5" class="g2"/>
                                 
                                 <text x="325" y="374" class="s4" onclick="openCategory(event, 'marknad-ahus')">Åhus</text>
-                                <text x="319" y="385" class="s4" onclick="openCategory(event, 'marknad-ahus')">26-27 juli</text>
+                                <text x="319" y="385" class="s4 cancelled" onclick="openCategory(event, 'marknad-ahus')">26-27 juli</text>
                                 <circle cx="363" cy="390" r="3.5" class="g2"/>
                                 
                                 <text x="117" y="264" class="s4" onclick="openCategory(event, 'marknad-orkelljunga')">Örkelljunga 19-20 maj</text>
@@ -1695,7 +1695,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong>: 25-26/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: 4/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-klippan')"><strong>Åby Klippan</strong>: 20/6</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: 26-27/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-ahus')"><strong>Åhus</strong>: <del>26-27/7</del></button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-astorp')"><strong>Åstorp</strong>: 17-18/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-orkelljunga')"><strong>Örkelljunga</strong>: 19-20/5</button>
                             </div>
@@ -2086,7 +2086,8 @@
                                         <div class="col-lg-12">
                                             <h2>Maria Magdalena Marknad, Åhus</h2>
                                             <hr class="invis">
-                                            <p>Marknaden nystartade 1977 med anor från 1600-talet.</p>
+                                            <p>Marknaden 2023 är inställd och återkommer 2024.</p>
+                                            <!-- <p>Marknaden nystartade 1977 med anor från 1600-talet.</p> -->
                                         </div>
                                     </div>
                                     <hr class="invis">
