Kivik har nu 2 olika marknader

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <circle cx="237" cy="395" r="3.5" class="g2"/>
                                 
                                 <text x="280" y="447" class="s4" onclick="openCategory(event, 'marknad-kivik')">Kivik 5-8 juli &</text>
-                                <text x="278" y="459" class="s4" onclick="openCategory(event, 'marknad-kivik')">30 sept-13 okt</text>
+                                <text x="278" y="459" class="s4" onclick="openCategory(event, 'marknad-kivik-appel')">30 sept-13 okt</text>
                                 <circle cx="345" cy="467" r="3.5" class="g2"/>
                                 
                                 <text x="115" y="507" class="s4" onclick="openCategory(event, 'marknad-limhamn')">Limhamn </text>
@@ -1673,7 +1673,8 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hastveda')"><strong>Hästveda</strong>: 10-11/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-horby')"><strong>Hörby</strong>: 3-4/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-hoor')"><strong>Höör</strong>: 10-11/8</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: 5-8/7 & 30/9-13/10</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-kivik')"><strong>Kivik</strong>: 5-8/7</button>
+                                <button class="tablinks" onclick="openCategory(event, 'marknad-kivik-appel')"><strong>Kivik</strong>: 30/9-13/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-limhamn')"><strong>Limhamn</strong>: 21-23/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-ljungbyhed')"><strong>Ljungbyhed</strong>: 16-17/8</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-lovestad')"><strong>Lövestad</strong>: 2/6 & 8/9</button>
@@ -2052,17 +2053,8 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <hr class="invis">
-                                    <div class="row">
-                                        <div class="col-lg-12">
-                                        </div>
-                                    </div>
-                                    <hr class="invis">
-                                    <div class="row">
-                                        <div class="col-lg-12">
-                                        </div>
-                                    </div>
-                                    <hr class="invis">
+                                </div>
+                                <div id="marknad-kivik-appel" class="tabcontent">
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Äppelmarknaden i Kivik</h2>
