Bytte kiviks marknad till .se

--- a/index.html
+++ b/index.html
@@ -2049,7 +2049,7 @@
                                             <h3>Kontakt</h3>
                                             <p>Kiviks Marknad<br>
                                             <a href="mailto:info@marknadsgeneralen.se">info@marknadsgeneralen.se</a><br>
-                                            <a href="http://www.kiviksmarknad.com/">www.kiviksmarknad.com</a>
+                                            <a href="http://www.kiviksmarknad.se/">www.kiviksmarknad.se</a>
                                             </p>
                                         </div>
                                     </div>
