Kivik har nu dubbla namn i kartan.

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                                 <text x="245" y="399" class="s4" onclick="openCategory(event, 'marknad-hoor')">10-11 aug</text>
                                 <circle cx="237" cy="395" r="3.5" class="g2"/>
                                 
-                                <text x="280" y="447" class="s4" onclick="openCategory(event, 'marknad-kivik')">Kivik 5-8 juli &</text>
-                                <text x="278" y="459" class="s4" onclick="openCategory(event, 'marknad-kivik-appel')">30 sept-13 okt</text>
+                                <text x="287" y="447" class="s4" onclick="openCategory(event, 'marknad-kivik')">Kivik 5-8 juli</text>
+                                <text x="250" y="459" class="s4" onclick="openCategory(event, 'marknad-kivik-appel')">Kivik 30 sept-13 okt</text>
                                 <circle cx="345" cy="467" r="3.5" class="g2"/>
                                 
                                 <text x="115" y="507" class="s4" onclick="openCategory(event, 'marknad-limhamn')">Limhamn </text>
