fixade länken till mail för äppelmarknaden

--- a/index.html
+++ b/index.html
@@ -2067,7 +2067,7 @@
                                             <h3>Kontakt</h3>
                                             <p>Lotta Arback<br>
                                                 076-232 74 54<br>
-                                                <a href="info@appelmarknaden.se">info@appelmarknaden.se</a><br>
+                                                <a href="mailto:info@appelmarknaden.se">info@appelmarknaden.se</a><br>
                                                 Mer info på <a href="https://www.appelmarknaden.se/">www.appelmarknaden.se</a>
                                             </p>
                                         </div>
