Ändrade kontakt för kiviks marknad

--- a/index.html
+++ b/index.html
@@ -2047,9 +2047,12 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
-                                            <p>Kiviks Marknad<br>
-                                            <a href="mailto:info@marknadsgeneralen.se">info@marknadsgeneralen.se</a><br>
-                                            <a href="http://www.kiviksmarknad.se/">www.kiviksmarknad.se</a>
+                                            <p><a href="http://www.kiviksmarknad.se/">www.kiviksmarknad.se</a><br>
+                                                Boka dina platser på Kiviks Marknad i år!<br>
+                                                <a href="https://bokamarknad.se/">bokamarknad.se</a><br>
+                                                Vid frågor kontakta oss på:<br>
+                                                <a href="mailto:boka@kiviksmarknad.se">boka@kiviksmarknad.se</a><br>
+                                                Telefontid: måndag - fredag kl. 10.00-14.00 Tel: 0703-468880
                                             </p>
                                         </div>
                                     </div>
