Uppdaterade kontaktinformation för Örkelljunga och Skurup

--- a/index.html
+++ b/index.html
@@ -2180,7 +2180,7 @@
                                                 Per Henriksgatan 2<br>
                                                 274 32 Skurup</p>
                                             <hr class="invis">
-                                            <p>Roland Hansson<br>
+                                            <p>Kent Svensson<br>
                                                 0705-41 73 76<br>
                                                 <a href="mailto:folkets.hus@skurupfhp.se">folkets.hus@skurupfhp.se</a><br>
                                                 <a href="http://www.skurupfhp.se/">www.skurupfhp.se</a>
@@ -2363,7 +2363,9 @@
                                             <h3>Kontakt</h3>
                                             <p>Örkelljungadagarna<br>
                                             Steffan Petersen<br>
-                                            0705-950038</p>
+                                            0705-950038<br>
+                                            <a href="mailto:barhandlarna@telia.com">barhandlarna@telia.com</a>
+                                        </p>
                                         </div>
                                     </div>
                                 </div>
