--- a/index.html
+++ b/index.html
@@ -2436,7 +2436,7 @@
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                             <h4>Kassör</h4>
-                            <p>Marita Rosengren</p>
+                            <p>Christer Sylvan</p>
                         </div>
                     </div>
                 </div>
@@ -2445,16 +2445,16 @@
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                             <h4>Ledamöter</h4>
-                            <p>Christer Sylvan<br>
-                                Roland Svensson</p>
+                            <p>Roland Svensson<br>
+                                Ros-Marie Stjernfeldt</p>
                         </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <div class="box wow slideInUp" data-wow-duration="1s" data-wow-delay="1s">
                             <h4>Ersättare</h4>
-                            <p>Renée Jönsson-Fiegen<br>
-                                Malin Mandin</p>
+                            <p>Erika Wetterholtz<br>
+                                Rolf Nilsson</p>
                         </div>
                     </div>
                 </div>
