--- a/index.html
+++ b/index.html
@@ -2267,8 +2267,8 @@
                                                 Box 308<br>
                                                 231 27 Trelleborg</p>
                                             <hr class="invis">
-                                            <p>Lars-Erik Olsson<br>
-                                                0706-45 56 96
+                                            <p>Per Sigurdh<br>
+                                                073-507 72 97
                                             </p>
                                             <hr class="invis">
                                             <p>Marknadskontoret<br>
