--- a/index.html
+++ b/index.html
@@ -2272,9 +2272,7 @@
                                             </p>
                                             <hr class="invis">
                                             <p>Marknadskontoret<br>
-                                                0706-45 56 96 tisd. 18:00 - 19:00<br>
-                                                <a href="mailto:info@palmfestivalen.se">info@palmfestivalen.se</a><br>
-                                                Anmälan: <a href="mailto:knallen@palmfestivalen.se">knallen@palmfestivalen.se</a><br>
+                                                072-230 17 47 endast tillgänglig ons-lör under marknadsdagarna<br>
                                                 <a href="http://www.palmfestivalen.se/">www.palmfestivalen.se</a>
                                             </p>
                                         </div>
