Ändrade text på palmfestivalen

--- a/index.html
+++ b/index.html
@@ -2273,7 +2273,7 @@
                                             <hr class="invis">
                                             <p>Marknadskontoret<br>
                                                 072-230 17 47 endast tillgänglig ons-lör under marknadsdagarna<br>
-                                                <a href="http://www.palmfestivalen.se/">www.palmfestivalen.se</a>
+                                                Boka plats här: <a href="http://www.palmfestivalen.se/">www.palmfestivalen.se</a>
                                             </p>
                                         </div>
                                     </div>
