Hästveda marknad har ny adress

--- a/index.html
+++ b/index.html
@@ -1854,10 +1854,9 @@
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
                                             <p>Hästveda Marknad<br>
-                                                Box 10<br>
-                                                282 06 Hästveda</p>
+                                                Högabergsvägen 2<br>
+                                                282 75 Hästveda</p>
                                             <p>Marknadskontoret 0451-37078<br>
-                                                Fax 0451-30755<br>
                                                 <a href="mailto:info@hastvedamarknad.se">info@hastvedamarknad.se</a><br>
                                                 <a href="http://www.hastvedamarknad.se/">www.hastvedamarknad.se</a>
                                             </p>
