--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
                                 <text x="188" y="529" class="s4" onclick="openCategory(event, 'marknad-skurup')">14-15 juni, 18 okt</text>
                                 <circle cx="244" cy="535" r="3.5" class="g2"/>
                                 
-                                <text x="358" y="316" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">Sölvesborg</text>
+                                <!-- <text x="358" y="316" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">Sölvesborg</text> -->
                                 <!-- <text x="358" y="327" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">1 juli, 3 okt</text> -->
-                                <text x="388" y="327" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">2 juli</text>
-                                <circle cx="427" cy="326" r="3.5" class="g2"/>
+                                <!-- <text x="388" y="327" class="s4" onclick="openCategory(event, 'marknad-solvesborg')">2 juli</text> -->
+                                <!-- <circle cx="427" cy="326" r="3.5" class="g2"/> -->
                                 
                                 <text x="308" y="525" class="s4" onclick="openCategory(event, 'marknad-tomelilla')">Tomelilla</text>
                                 <text x="309" y="536" class="s4" onclick="openCategory(event, 'marknad-tomelilla')">17 juli</text>
@@ -1696,7 +1696,7 @@
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-simrishamn')"><strong>Simrishamn</strong>: 24-26/7</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-sjobo')"><strong>Sjöbo</strong>: 17-18/7 & 4-5/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-skurup')"><strong>Skurup</strong>: 14-15/6 & 18/10</button>
-                                <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: 2/7</button>
+                                <!-- <button class="tablinks" onclick="openCategory(event, 'marknad-solvesborg')"><strong>Sölvesborg</strong>: 2/7</button> -->
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-tomelilla')"><strong>Tomelilla</strong>: 17/7 & 18/10</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-vinslov')"><strong>Vinslöv</strong>: 8/6</button>
                                 <button class="tablinks" onclick="openCategory(event, 'marknad-trelleborg')"><strong>Trelleborg</strong>: 29-30/8</button>
@@ -2163,7 +2163,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div id="marknad-solvesborg" class="tabcontent">
+                                <!-- <div id="marknad-solvesborg" class="tabcontent">
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Sölvesborgs Marknad</h2>
@@ -2190,7 +2190,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div id="marknad-tomelilla" class="tabcontent">
                                     <div class="row">
                                         <div class="col-lg-12">
