--- a/index.html
+++ b/index.html
@@ -2297,6 +2297,7 @@
                                             <h3>Kontakt</h3>
                                             <p>Klippans Brottarklubb<br>
                                                 0721-664389<br>
+                                                Knallebokning sker endast på e-mail<br>
                                                 <a href="mailto:abymarknad@klippansbk.se">abymarknad@klippansbk.se</a><br>
                                                 <a href="http://www.klippan.se/upplevagora/evenemang/abymarknad.8561.html">www.klippan.se/upplevagora/evenemang/abymarknad.8561.html</a><br>
                                                 <a href="https://www.facebook.com/groups/abymarknad/">www.facebook.com/groups/abymarknad</a>
