Ändrat kontaktuppgift till höörs marknad

--- a/index.html
+++ b/index.html
@@ -1911,9 +1911,7 @@
                                                 Tvärgatan 1<br>
                                                 243 32 Höör</p>
                                             <hr class="invis">
-                                            <p>Daniel Nilsson<br>
-                                                0733-70 48 88 vid ej svar, skicka SMS<br>
-                                                <a href="mailto:brottare@live.se">brottare@live.se</a><br>
+                                            <p><a href="mailto:hoorsmarknad@gmail.com">hoorsmarknad@gmail.com</a><br>
                                                 Program läggs ut på <a href="http://www.hoorsbk.se/">www.hoorsbk.se</a>
                                             </p>
                                         </div>
