Telefonnummer till Höörs marknad

--- a/index.html
+++ b/index.html
@@ -1912,6 +1912,7 @@
                                                 243 32 Höör</p>
                                             <hr class="invis">
                                             <p><a href="mailto:hoorsmarknad@gmail.com">hoorsmarknad@gmail.com</a><br>
+                                                0760-08 97 28 - Enbart efter 17:00!<br>
                                                 Program läggs ut på <a href="http://www.hoorsbk.se/">www.hoorsbk.se</a>
                                             </p>
                                         </div>
