Uppdaterade kontaktuppgifter limhamns marknad

--- a/index.html
+++ b/index.html
@@ -1949,14 +1949,9 @@
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
                                             <p>Limhamnsklubbarnas Samorganisation<br>
-                                                c/o Kent Rickbo<br>
-                                                Perstorpsgatan 19 c<br>
-                                                235 33 Vellinge</p>
-                                            <hr class="invis">
-                                            <p>Kent Rickbo<br>
                                                 0702-44 61 41<br>
                                                 <a href="mailto:limhamnsmarknad@gmail.com">limhamnsmarknad@gmail.com</a><br>
-                                                Mer info på <a href="https://limhamnsmarknad.se/">limhamnsmarknad.se</a>
+                                                Ansökan plats <a href="https://limhamnsmarknad.se/">limhamnsmarknad.se</a>
                                             </p>
                                         </div>
                                     </div>
