Uppdaterade beskrivning och kontaktinformation för Hörby Marknad

--- a/index.html
+++ b/index.html
@@ -1867,17 +1867,27 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Hörby Marknad</h2>
-                                            <p>Marknadsplats: De centrala delarna av staden. Marknaden lockar ca 80 000 besökare och 500 knallar varje år. Första marknadsåret var 1748.</p>
+                                            <p>Välkommen till Hörby Marknad, en av Skånes äldsta och mest älskade traditioner, med anor ända tillbaka till 1748!<br>
+                                                Under två härliga sommardagar förvandlas hela Hörby centrum till en levande marknadsplats fylld av glädje, dofter, musik och gemenskap.<br>
+                                                Med över 400 knallar, ett färgsprakande tivoli, lokala delikatesser, musikunderhållning och aktiviteter för både stora och små, är detta en folkfest du inte vill missa.<br>
+                                                Det som gör Hörby Marknad så unik är att den äger rum mitt i byn, där gator och torg fylls av liv och rörelse.<br>
+                                                Oavsett om du är ute efter hantverk, god mat, karuseller eller bara vill njuta av stämningen, finns det något för alla!
+                                            </p>
+                                            <p><strong>Plats:</strong> Hörby centrum</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
-                                            <p>Hörby Marknad<br>
-                                                <a href="mailto:horby.marknad@horby.se">horby.marknad@horby.se</a><br>
-                                                0415-37 82 49<br>
-                                                0415-37 81 30
+                                            <p>Vid frågor kontakta oss på:<br>
+                                                E-post: <a href="mailto:horby.marknad@horby.se">horby.marknad@horby.se</a><br>
+                                                Vid direkta frågor går det också bra att ringa:<br>
+                                                <ul>
+                                                    <li><strong>Erika</strong> - Knallekoordinator: 0415-37 82 49</li>
+                                                    <li><strong>Irma</strong> - Evenemangskoordinator: 0415-37 84 55</li>
+                                                    <li><strong>Emma</strong> - Marknadsansvarig: 0415-37 84 51</li>
+                                                </ul>
                                             </p>
                                             <hr class="invis">
                                             <p>
