Uppdaterad beskrivning på Höörs marknad

--- a/index.html
+++ b/index.html
@@ -1907,10 +1907,7 @@
                                             <hr class="invis">
                                             <p>Marknaden startades år 1988.</p>
                                             <hr class="invis">
-                                            <p>Kräftskiva och grillmat samt dans till orkester med start 19.00 fredag kväll.<br>
-                                                Dans och grill Lördag.<br>
-                                                Vi har Möllers Tivoli och Partyfabriken på plats.
-                                            </p>
+                                            <p>Vi startar fredagen med Möllers Tivoli och sen är det marknad och tivoli hela helgen.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
